@@ -1,3 +1,14 @@
+2002-01-11  Kevin Greiner  <kgreiner@xpediantsolutions.com>
+	* gnus-agent.el (gnus-agent-get-undownloaded-list): Include the
+	fictious headers generated by nnagent (ie. Undownloaded Article
+	####) in the list of articles that have not been downloaded.
+	
+	* gnus-int.el (): Added require declarations to resolve
+	compile-time warnings.
+	(gnus-open-server): If the server status is set to offline,
+	recursively execute gnus-open-server to open the offline backend
+	(e.g. nnagent).
+
 2003-01-14  Jesper Harder  <harder@ifa.au.dk>
 
 	* gnus-art.el (gnus-article-reply-with-original): Use
